ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-gunicorn-service
                port:
                  number: 80

          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: python-gunicorn-service
                port:
                  number: 80
